[gd_scene load_steps=6 format=2]

[ext_resource path="res://Basic Ranged Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemyCannonball.tscn" type="PackedScene" id=2]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0392157, 0.141176, 0.976471, 1 )

[sub_resource type="SphereShape" id=1]

[node name="BasicRangedEnemy" type="KinematicBody"]
script = ExtResource( 1 )
enemyCannonball = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area" parent="."]
transform = Transform( 25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetection"]
shape = SubResource( 1 )

[node name="cannonfireSpawn" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92894, 0, 0 )

[node name="Cannonballs" type="Spatial" parent="."]

[node name="Cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
